refactor: update environment variables and improve manifest configuration

--- a/extension/.env.example
+++ b/extension/.env.example
@@ -1,7 +1,7 @@
 # Environment variables untuk Extension
 
-# Development
-VITE_API_URL="http://localhost:3000"
+# Production API URL
+VITE_API_URL="https://api-extension.ilhame.id"
 
-# Production (uncomment and update with your Vercel URL)
-# VITE_API_URL="https://your-app.vercel.app"
+# Development (uncomment for local development)
+# VITE_API_URL="http://localhost:3000"
