--- a/extension/package.json
+++ b/extension/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "package": "powershell -ExecutionPolicy Bypass -File .\\package-extension.ps1"
   },
   "dependencies": {
     "lucide-react": "^0.294.0",
