--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -1,8 +1,11 @@
 name: Build and Release Extension
 
 on:
-  release:
-    types: [created]
+  push:
+    branches:
+      - main
+    tags:
+      - 'v*'
   workflow_dispatch:
 
 jobs:
@@ -48,22 +51,23 @@ jobs:
         working-directory: ./extension
         run: |
           mkdir -p releases
-          cd dist
-          zip -r ../releases/bookmark-extension-v${{ steps.get_version.outputs.version }}.zip .
-      
-      - name: Upload release asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./extension/releases/bookmark-extension-v${{ steps.get_version.outputs.version }}.zip
-          asset_name: bookmark-extension-v${{ steps.get_version.outputs.version }}.zip
-          asset_content_type: application/zip
-      
-      - name: Upload build artifact
+          cd distbuild artifact (always)
         uses: actions/upload-artifact@v4
         with:
+          name: bookmark-extension-v${{ steps.get_version.outputs.version }}
+          path: ./extension/releases/bookmark-extension-v${{ steps.get_version.outputs.version }}.zip
+          retention-days: 30
+      
+      - name: Create GitHub Release (only for tags)
+        if: startsWith(github.ref, 'refs/tags/v')
+        uses: softprops/action-gh-release@v1
+        with:
+          files: ./extension/releases/bookmark-extension-v${{ steps.get_version.outputs.version }}.zip
+          draft: false
+          prerelease: false
+          generate_release_notes: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           name: bookmark-extension-v${{ steps.get_version.outputs.version }}
           path: ./extension/dist/
           retention-days: 30
