fix: update API URLs to production and remove tag functionality from forms

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,4 +10,4 @@ SUPABASE_SERVICE_ROLE_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
 NEXT_PUBLIC_SUPABASE_ANON_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
 
 # Next.js Configuration
-NEXT_PUBLIC_API_URL="http://localhost:3000"
+NEXT_PUBLIC_API_URL="http://188.166.248.22:3001"
