--- a/extension/.env.example
+++ b/extension/.env.example
@@ -1,7 +1,7 @@
 # Environment variables untuk Extension
 
 # Production API URL
-VITE_API_URL="http://localhost:3000"
+VITE_API_URL="http://188.166.248.22:3001"
 
 # Development (uncomment for local development)
-# VITE_API_URL="http://localhost:3000"
+# VITE_API_URL="http://188.166.248.22:3001"
