feat: Add favicon service with caching and loading animations
- Implemented a favicon service to fetch favicons from a backend API.
- Added caching mechanism to reduce API calls.
- Created loading animations for better user experience during favicon retrieval.
- Introduced default favicon images for cases where the favicon cannot be fetched.
- Added comprehensive examples and documentation for usage of the favicon service.
- Updated database schema to include iconUrl for bookmarks.

--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,13 @@
     "postinstall": "prisma generate",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
-    "prisma:studio": "prisma studio"
+    "prisma:studio": "prisma studio",
+    "test:favicon": "node test-favicon-api.js"
   },
   "dependencies": {
     "@prisma/client": "^5.7.1",
     "@supabase/supabase-js": "^2.39.0",
+    "cheerio": "^1.1.2",
     "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
