--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "Hame Bookmark",
-  "description": "A smarter way to manage your bookmarks directly from your extension. By ilhame.id",
-  "version": "1.1.12",
+  "description": "A smarter way to manage your bookmarks directly from your extension by ilhame.id",
+  "version": "1.1.13",
   "author": "IlhameID",
   
   "icons": {
